log
Wed 20 Mar 2024 08:20:25 PM UTC: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:50:37: error: expected expression before ‘)’ token
   50 |     int* dato = (int*) malloc(sizeof);
      |                                     ^
Compilation failed
24f3a0c
Wed 20 Mar 2024 08:21:03 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
bc182e1
Wed 20 Mar 2024 08:22:04 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|5
total_score: 0/70
4ccc9b0
Wed 20 Mar 2024 08:23:25 PM UTC: 
 exercises.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  1|4
total_score: 10/70
4f50c4c
Wed 20 Mar 2024 08:26:17 PM UTC: 
 exercises.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:69:10: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Werror=int-conversion]
   69 |     suma += numero;
      |          ^~
cc1: all warnings being treated as errors
Compilation failed
19d8e29
Wed 20 Mar 2024 08:29:37 PM UTC: 
 exercises.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  2|3
total_score: 20/70
ab000b2
